# ellipsoidInclusion

./: CMakeLists.txt  README.md  ellincheck.cpp  ellincheck.hpp  main.cpp
.github/workflows/: cmake.yml
ellincheck/: CMakeLists.txt  ellincheck.cpp  ellincheck.h
src/: ellincheck.cpp  ellincheck.h
test/: CMakeLists.txt  main_test.cpp
